<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tensorrt_yolov7</name>
  <version>3.0.0</version>
  <description>TensorRT Yolov7 Library</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros2_numpy</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tier4_perception_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
